tests/types/errors/invalid_len_operand.mochi
let x = 1
print(len(x))
